[gd_scene load_steps=6 format=3 uid="uid://dspdb0j60d4tg"]

[ext_resource type="Script" path="res://scripts/water_window.gd" id="1_ib4cn"]
[ext_resource type="PackedScene" uid="uid://bvysxwumu1ofw" path="res://scenes/window.tscn" id="1_t5skk"]
[ext_resource type="PackedScene" uid="uid://c2vqextiq0c1g" path="res://scenes/slot.tscn" id="3_3q24x"]
[ext_resource type="Texture2D" uid="uid://bkj6jtght3y6x" path="res://assets/ui/logo/water.png" id="7_2myq7"]
[ext_resource type="Texture2D" uid="uid://cx7y78u773yeg" path="res://assets/ui/logo/water_white.png" id="8_yn46f"]

[node name="Window" instance=ExtResource("1_t5skk")]
offset_right = 439.0
offset_bottom = 200.0
script = ExtResource("1_ib4cn")

[node name="Titre" parent="." index="1"]
text = "Water Desalinator"

[node name="Slot1" parent="." index="3" instance=ExtResource("3_3q24x")]
layout_mode = 1
offset_left = 144.0
offset_top = 49.0
offset_right = -253.0
offset_bottom = -151.0
card_type = 2

[node name="Slot2" parent="." index="4" instance=ExtResource("3_3q24x")]
layout_mode = 1
offset_left = 239.0
offset_top = 49.0
offset_right = -158.0
offset_bottom = -151.0
card_type = 2

[node name="Slot3" parent="." index="5" instance=ExtResource("3_3q24x")]
layout_mode = 1
offset_left = 335.0
offset_top = 49.0
offset_right = -62.0
offset_bottom = -151.0
card_type = 2

[node name="Timer" type="Timer" parent="." index="6"]
wait_time = 15.0
one_shot = true

[node name="ProgressBar" type="TextureProgressBar" parent="." index="7"]
layout_mode = 0
offset_left = 19.0
offset_top = 74.0
offset_right = 105.0
offset_bottom = 136.0
scale = Vector2(1.3, 1.3)
value = 10.0
fill_mode = 3
texture_under = ExtResource("7_2myq7")
texture_progress = ExtResource("8_yn46f")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
